--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "启动程序",
-            "program": "${workspaceRoot}\\build\\server.js",
+            "program": "${workspaceRoot}\\build\\server.js",  // 不同操作系统请自行修改路径分隔符号
             "cwd": "${workspaceRoot}",
             "outFiles": [
 				"${workspaceRoot}\\build\\**\\*.js"
